--- a/res/layout/sight_detail.xml
+++ b/res/layout/sight_detail.xml
@@ -64,7 +64,7 @@
         android:layout_centerVertical="true" >
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/sight_introduce"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
