我修改的部分和广贤修改的部分

--- a/res/layout/allsightdetail.xml
+++ b/res/layout/allsightdetail.xml
@@ -34,6 +34,13 @@
                 android:ems="10"
                 android:hint="@string/search_name"
                 android:imeOptions="actionSearch" />
+
+            <Button
+                android:id="@+id/find_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="查询" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -69,13 +76,17 @@
                 android:src="@drawable/advertisement"
                 android:scaleType="fitXY" />
         </LinearLayout>
+	<ScrollView 
+	    android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+	    >
 
         <ListView
             android:id="@+id/city_listview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="match_parent">
         </ListView>
-		
+		</ScrollView>
     </LinearLayout>
 
 </RelativeLayout>
