--- a/res/layout/regist.xml
+++ b/res/layout/regist.xml
@@ -26,7 +26,7 @@
 		    android:text="用户昵称:" />
 
 		<EditText
-		    android:id="@+id/editText1"
+		    android:id="@+id/username"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_weight="1"
@@ -57,7 +57,7 @@
 		    android:text="真实姓名:" />
 
 		<EditText
-		    android:id="@+id/editText4"
+		    android:id="@+id/realname"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_weight="1"
@@ -81,11 +81,10 @@
 		    android:text="用户密码：" />
 
 		<EditText
-		    android:id="@+id/editText2"
-		    android:layout_width="fill_parent"
-		    android:layout_height="wrap_content"
-		    android:ems="10"
-		    android:inputType="textPassword" />
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:ems="10"
+				android:inputType="textPassword" android:id="@+id/password"/>
 
 	</LinearLayout>
 
@@ -102,7 +101,7 @@
 		    android:text="密码确认：" />
 
 		<EditText
-		    android:id="@+id/editText3"
+		    android:id="@+id/repassword"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:ems="10"
@@ -123,7 +122,7 @@
 		    android:text="用户性别:" />
 
 		<EditText
-		    android:id="@+id/editText5"
+		    android:id="@+id/sex"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_weight="1"
@@ -138,7 +137,7 @@
 		    android:text="用户年龄:" />
 
 		<EditText
-		    android:id="@+id/editText6"
+		    android:id="@+id/age"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_weight="1"
@@ -162,7 +161,7 @@
 		    android:text="用户学校:" />
 
 		<EditText
-		    android:id="@+id/editText7"
+		    android:id="@+id/school"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_weight="1"
@@ -185,7 +184,7 @@
 		    android:text="用户邮箱:" />
 
 		<EditText
-		    android:id="@+id/editText8"
+		    android:id="@+id/email"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_weight="1"
@@ -222,26 +221,18 @@
 		    android:id="@+id/textView10"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
+			android:lines="3"
 		    android:text="简介:" />
 			<EditText
-		    android:id="@+id/editText10"
+		    android:id="@+id/intro"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_weight="1"
-		    android:ems="10" 
+		    android:ems="10"
 		    android:singleLine="true">
 		 <requestFocus />
    </EditText>
-   		<EditText
-		    android:id="@+id/editText11"
-		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-		    android:layout_weight="1"
-		    android:ems="10" 
-		    android:singleLine="true">
-		 <requestFocus />
-   </EditText>
-	<LinearLayout 
+			<LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -294,24 +285,24 @@
     >
 
 	<Button
-	    android:id="@+id/button5"
+	    android:id="@+id/clearall"
 	    style="?android:attr/buttonStyleSmall"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentTop="true"
 	    android:layout_marginRight="18dp"
-	    android:layout_toLeftOf="@+id/button6"
-	    android:text="OK" />
+	    android:layout_toLeftOf="@+id/submit"
+	    android:text="重置" />
 
 	<Button
-	    android:id="@+id/button6"
+	    android:id="@+id/submit"
 	    style="?android:attr/buttonStyleSmall"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_alignParentRight="true"
 	    android:layout_alignParentTop="true"
 	    android:layout_marginRight="85dp"
-	    android:text="cancel" />
+	    android:text="注册" />
 
 		</RelativeLayout>	
 		</LinearLayout>
