--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -68,15 +68,15 @@
             android:text="确认" />
 
         <Button
-            android:id="@+id/button2"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/button1"
-            android:layout_alignBottom="@+id/button1"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="100dp"
-            android:text="注册" />
+                android:id="@+id/button2"
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/button1"
+                android:layout_alignBottom="@+id/button1"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="100dp"
+                android:text="注册" android:onClick="regist"/>
 
     </RelativeLayout>
  
