--- a/res/layout/choose1.xml
+++ b/res/layout/choose1.xml
@@ -37,13 +37,13 @@
             >
         </AutoCompleteTextView>
          <ImageButton
-            android:id="@+id/imagebutton1"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentBottom="true"
-            android:layout_toRightOf="@+id/edit_Search1"
-            android:layout_marginLeft="5dp"
-            android:src="@drawable/person" />
+                 android:id="@+id/imagebutton1"
+                 android:layout_width="30dp"
+                 android:layout_height="30dp"
+                 android:layout_alignParentBottom="true"
+                 android:layout_toRightOf="@+id/edit_Search1"
+                 android:layout_marginLeft="5dp"
+                 android:src="@drawable/person" android:onClick="turnToPersonal"/>
         <ImageButton
             android:id="@+id/imagebutton2"
             android:layout_width="30dp"
