--- a/res/layout/sight_detail.xml
+++ b/res/layout/sight_detail.xml
@@ -9,20 +9,14 @@
         android:layout_height="30dp"
         android:background="#696969" >
 
-        <ImageButton
-            android:id="@+id/retreatButton1"
+        <Button
+            android:id="@+id/back_btn"
             android:layout_width="wrap_content"
             android:layout_height="30dp"
-            android:src="@drawable/arrow" />
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_toRightOf="@+id/retreatButton1"
-            android:gravity="center"
-            android:text="@string/sight_information"
-            android:textSize="14sp" />
+            android:drawableLeft="@drawable/arrow" 
+            android:text="景点详情"
+            android:textSize="14sp"
+            />
 
         <ImageButton
             android:id="@+id/collectButton"
@@ -43,7 +37,7 @@
     </RelativeLayout>
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/sight_view"
         android:layout_width="wrap_content"
         android:layout_height="125dp"
         android:layout_below="@+id/relativeLayout1"
@@ -55,8 +49,8 @@
 
     <RelativeLayout
         android:id="@+id/relativeLayout2"
-        android:layout_width="fill_parent"
-        android:layout_height="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
          android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
@@ -64,7 +58,7 @@
         android:layout_centerVertical="true" >
 
         <TextView
-            android:id="@+id/sight_introduce"
+            android:id="@+id/sight_describe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -75,20 +69,41 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/relativeLayout3"
+        android:id="@+id/relativelayout3"
         android:layout_width="fill_parent"
         android:layout_height="150dp"
-        android:layout_alignLeft="@+id/relativeLayout2"
+        android:layout_alignParentLeft="true"
         android:layout_alignTop="@+id/relativeLayout2" >
     </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/relativeLayout3"
-        android:layout_marginTop="15dp"
-        android:src="@drawable/home_three" />
+   <EditText
+        android:id="@+id/sight_my_message"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/relativelayout3"
+        android:ems="10"
+        android:hint="@string/message"
+        android:inputType="textMultiLine"
+        android:padding="10dp"
+        android:src="@drawable/home_three" > 
+    </EditText>
+	
+   <TextView
+       android:id="@+id/sight_all_message"
+       android:layout_width="wrap_content"
+       android:layout_height="fill_parent"
+       android:layout_alignLeft="@+id/relativeLayout2"
+       android:layout_alignParentRight="true"
+       android:layout_below="@+id/sight_message" />
 
+   <TextView
+       android:id="@+id/city_name"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_alignBottom="@+id/relativeLayout1"
+       android:layout_alignParentTop="true"
+       android:layout_centerHorizontal="true"
+
+       android:gravity="center"/>
+   
 </RelativeLayout>
