--- a/res/layout/routesCollect.xml
+++ b/res/layout/routesCollect.xml
@@ -22,16 +22,16 @@
 
 
 	</LinearLayout>
-	<ScrollView
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:id="@+id/scrollView">
+	<!--<ScrollView-->
+			<!--android:layout_width="match_parent"-->
+			<!--android:layout_height="match_parent"-->
+			<!--android:id="@+id/scrollView">-->
 		<ListView
-        android:layout_width="match_parent"
-        android:layout_height="201dp"
-        android:paddingBottom="3dp"
-        android:paddingLeft="10dp"
-        android:id="@+id/routeslist"/>
-	</ScrollView>
+				android:layout_width="match_parent"
+				android:layout_height="match_parent"
+				android:paddingBottom="3dp"
+				android:paddingLeft="10dp"
+				android:id="@+id/routeslist"/>
+	<!--</ScrollView>-->
 
 </LinearLayout>
